--- a/pom.xml
+++ b/pom.xml
@@ -116,18 +116,20 @@
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
     </dependency>
-    <!-- Micrometer Core -->
+    <!-- Micrometer Core
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-core</artifactId>
       <version>1.5.2</version>
     </dependency>
-    <!-- Prometheus -->
+     -->
+    <!-- Prometheus 
     <dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<version>1.5.4</version>
-		</dependency>    
+		</dependency>
+    -->
     <!-- Azure Micrometer 
     <dependency>
       <groupId>io.micrometer</groupId>
@@ -142,12 +144,13 @@
       <version>2.6.0</version>
     </dependency>
     -->
-    <!-- Datadog -->
+    <!-- Datadog 
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-datadog</artifactId>
       <version>1.5.2</version>
     </dependency>
+    -->
     <!-- Chaos Monkey -->
     <dependency>
       <groupId>de.codecentric</groupId>
