--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,28 +17,25 @@ spring.jpa.open-in-view=false
 spring.messages.basename=messages/messages
 
 # Actuator / Management
-management.endpoints.web.base-path=/actuator
-management.endpoints.web.exposure.include=*
+# management.endpoints.web.base-path=/actuator
+# management.endpoints.web.exposure.include=*
 
 # Micrometer
 # management.metrics.use-global-registry=true
-management.metrics.distribution.percentiles-histogram.http.server.requests=true
-management.metrics.distribution.sla.http.server.requests=100ms, 200ms, 400ms
-management.metrics.distribution.percentiles.http.server.requests=0.5, 0.9, 0.95, 0.99, 0.999
+# management.metrics.distribution.percentiles-histogram.http.server.requests=true
+# management.metrics.distribution.sla.http.server.requests=100ms, 200ms, 400ms
+# management.metrics.distribution.percentiles.http.server.requests=0.5, 0.9, 0.95, 0.99, 0.999
 
 # Datadog
-management.metrics.export.datadog.api-key=@datadog.api-key@
+# management.metrics.export.datadog.api-key=@datadog.api-key@
 
 # Chaos Monkey
 spring.profiles.active=chaos-monkey
-# Start off disabled
 chaos.monkey.enabled=false
-# Watchers
 chaos.monkey.watcher.controller=true
 chaos.monkey.watcher.restController=true
 chaos.monkey.watcher.service=true
 chaos.monkey.watcher.repository=true
-# Management
 management.endpoint.chaosmonkey.enabled=true
 management.endpoint.chaosmonkeyjmx.enabled=true
 
