--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,17 @@
       <artifactId>chaos-monkey-spring-boot</artifactId>
       <version>2.2.0</version>
     </dependency>
+    <!-- Open Telemetry -->
+    <dependency>
+      <groupId>io.opentelemetry</groupId>
+      <artifactId>opentelemetry-extension-annotations</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.opentelemetry</groupId>
+      <artifactId>opentelemetry-api</artifactId>
+      <version>1.2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>app</finalName>
