--- a/.github/workflows/kubernetes-deploy.yml
+++ b/.github/workflows/kubernetes-deploy.yml
@@ -40,16 +40,8 @@ jobs:
         role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
         role-duration-seconds: 900
         role-session-name: github
-
-    # Deploy Secrets to Kubernetes
-    - name: Deploy to Kubernetes
-      uses: pangealab/kratos@master
-      env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-      with:
-        args: create secret generic lightstep --from-literal=token=${{ secrets.LIGHTSTEP_ACCESS_TOKEN }} -n sandbox
-        
-    # Deploy App to Kubernetes
+      
+    # Deploy to Kubernetes
     - name: Deploy to Kubernetes
       uses: pangealab/kratos@master
       env:
