--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,6 +1,6 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=jdbc:mysql://localhost/petclinic
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/petclinic
 spring.datasource.username=petclinic
 spring.datasource.password=petclinic
 # SQL is written to be idempotent so this is safe
